# draw_cpp

./: CMakeLists.txt
cmake/: drawcppConfig.cmake
drawing/: CMakeLists.txt
drawing/include/: control_panel.h  picture_panel.h
drawing/src/: control_panel.cpp  main_window.cpp  modeling.cpp  picture_panel.cpp
include/: chart_dialog.h  formula_processor.h  main_window.h  picture_panel.h  solver.h  widgets.h
modeling/: CMakeLists.txt
modeling/include/: solver.h
modeling/src/: modeling.cpp
src/: chart_dialog.cpp  chart_dialog.h  control_panel.cpp  formula_processor.cpp  graph_choice_panel.cpp  main.cpp  main_window.cpp  picture_panel.cpp  picture_panel.h  widgets.h
symbolic_math/: formula_processor.cpp
test/: main.cpp  symbols_test.cpp
